--- a/wqa_android_ui_1/app/src/main/res/layout/model_monitor.xml
+++ b/wqa_android_ui_1/app/src/main/res/layout/model_monitor.xml
@@ -32,8 +32,11 @@
         android:weightSum="10">
 
         <TextView
+            android:id="@+id/m_monitor_data_name"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:gravity="center"
+            android:textSize="25dp"
             android:layout_weight="2.5" />
 
         <TextView
@@ -50,14 +53,16 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:gravity="top|center_horizontal"
+            android:textSize="18dp"
+            android:gravity="center"
             android:text="" />
-
+        
         <TextView
             android:id="@+id/m_monitor_temper"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
+            android:textSize="18dp"
             android:gravity="center|center_horizontal"
             android:text="" />
     </LinearLayout>
