--- a/wqa_android_ui_1/app/src/main/res/layout/fragment_config_table2.xml
+++ b/wqa_android_ui_1/app/src/main/res/layout/fragment_config_table2.xml
@@ -14,19 +14,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="10"
-            android:background="@drawable/dialog_0"
+            android:background="@drawable/dialog_1"
             android:orientation="vertical">
-            <TextView
-                style="@style/common_text"
-                android:id="@+id/dct_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_margin="5dp"
-                android:text="配置参数表"/>
             <ScrollView
                 android:id="@+id/dct_table"
-                android:layout_margin="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <LinearLayout
