--- a/wqa_android_ui_1/app/src/main/res/layout/fragment_config_table.xml
+++ b/wqa_android_ui_1/app/src/main/res/layout/fragment_config_table.xml
@@ -4,60 +4,61 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.naqing.dev_views.fragment_dev_config_table">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="10"
+        android:layout_margin="10dp"
         android:orientation="vertical"
-        android:layout_margin="10dp">
+        android:weightSum="10">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="8.5"
-            android:background="@drawable/dialog_0"
+            android:background="@drawable/dialog_1"
             android:orientation="vertical">
-            <TextView
-                style="@style/common_text"
-                android:id="@+id/dct_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_margin="5dp"
-                android:text="配置参数表"/>
+
             <ScrollView
-                android:layout_margin="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="10dp">
+
                 <LinearLayout
                     android:id="@+id/dct_list"
-                    android:paddingStart="5dp"
-                    android:paddingEnd="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical">
-                </LinearLayout>
+                    android:orientation="vertical"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="10dp"></LinearLayout>
             </ScrollView>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1.5"
-            android:weightSum="2"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="2">
+
             <Button
-                style="@style/common_button_style"
                 android:id="@+id/dct_read"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="读取"/>
-            <Button
                 style="@style/common_button_style"
-                android:id="@+id/dct_set"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="确定"/>
+                android:text="读取" />
+
+            <Button
+                android:id="@+id/dct_set"
+                style="@style/common_button_style"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="确定" />
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
