--- a/wqa_android_ui_1/app/src/main/res/layout/model_monitor.xml
+++ b/wqa_android_ui_1/app/src/main/res/layout/model_monitor.xml
@@ -11,16 +11,22 @@
         style="@style/common_text"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.5"
+        android:layout_weight="1.2"
+        android:gravity="bottom|center_horizontal"
         android:text=""
         android:textSize="20dp" />
 
     <TextView
+        android:id="@+id/m_monitor_alarm"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5" />
+        android:gravity="center"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="25dp"
+        android:layout_weight="0.8" />
 
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
@@ -51,8 +57,9 @@
             android:id="@+id/m_monitor_data"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="3.5"
-            android:gravity="bottom|center_horizontal"
+            android:layout_marginTop="5dp"
+            android:layout_weight="3.3"
+            android:gravity="center"
             android:text=""
             android:textSize="40dp" />
 
@@ -60,7 +67,7 @@
             android:id="@+id/m_monitor_range"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="2.2"
             android:gravity="center"
             android:text=""
             android:textSize="18dp" />
@@ -70,7 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
-            android:gravity="center|center_horizontal"
+            android:gravity="center"
             android:text=""
             android:textSize="18dp" />
     </LinearLayout>
